                            CHANGES IN VERSION 0.12.1 (October 2021)

BUG FIXES

-- Fix a bug introduced in conjugacy processing in version 0.11.0 (PR #1087)
that causes incorrect MCMC sampling only in specific cases.  The impacted cases
have terms of the form "a[i] + x[i] * beta" (or more simply "x[i] * beta" or
"a[i] + beta"), with beta subject to conjugate sampling and either (i) 'x'
provided via NIMBLE's constants argument and x[1] == 1 or (ii) 'a' provided
via NIMBLE's constants argument and a[1] == 0 (PR #1172).

DEVELOPER LEVEL CHANGES

-- Use USE_FC_LEN_T-related syntax in F77 calls in dists.cpp per CRAN request
(PR #1173).

                            CHANGES IN VERSION 0.12.0 (September 2021)

USER LEVEL CHANGES

-- Completely revamp WAIC in NIMBLE, creating an online version that does not
require any particular variable monitors. The new WAIC can calculate conditional
or marginal WAIC and can group data nodes into joint likelihood terms if
desired. In addition there is a new `calculateWAIC` function that will calculate
the basic conditional WAIC on output from MCMC output (either using an MCMC
object or a matrix of samples), without having to enable the WAIC when creating
the MCMC (PR #1136).

-- Add LKJ distribution, useful for prior distributions for correlation
matrices, including RW samplers executed on an unconstrained transformed
parameter space, and assigned by default during MCMC configuration (issue #993).

-- Improve formatting of standard logging messages (PR 1162).

-- Check for negative indexes in nimbleFunction code and error out
during compilation (PR #1166).

-- Update handling of missing indexing on the output of functions
(e.g., `myfun()[,1]`) in model code to allow missing indexing (PR #1156)
and to error trap if missing indexing prevents conjugacy checking (PR #1155).

-- Improve error message when a user tries to use a dynamic vector of indexes
(PR #1151).

-- Add error trapping for use of `[[` in model code (PR #1148).
