@@ -10,18 +10,17 @@ samplerConf <- setRefClass(
     ),
     methods = list(
         initialize = function(name, samplerFunction, target, control, model) {
-            name <<- name
-            samplerFunction <<- samplerFunction
-            target <<- target
-            control <<- control
+            setName(name)
+            setSamplerFunction(samplerFunction)
+            setTarget(target, model)
+            setControl(control)
             if(name == 'crossLevel')   control <<- c(control, list(dependent_nodes = model$getDependencies(target, self = FALSE, stochOnly = TRUE)))  ## special case for printing dependents of crossLevel sampler (only)
-            targetAsScalar <<- model$expandNodeNames(target, returnScalarComponents = TRUE)
         },
         setName = function(name) name <<- name,
         setSamplerFunction = function(fun) samplerFunction <<- fun,
         setTarget = function(target, model) {
             target <<- target
-            targetAsScalar <<- model$expandNodeNames(target, returnScalarComponents = TRUE)
+            targetAsScalar <<- model$expandNodeNames(target, returnScalarComponents = TRUE, sort = TRUE)
         },
         setControl = function(control) control <<- control,
         buildSampler = function(model, mvSaved) {
@@ -584,7 +583,7 @@ This function also has the side effect of resetting the sampler execution orderi
 
 Arguments:
 
-...: Chracter strings or numeric indices.  Character names may be used to specify the node names for samplers to retain.  A numeric indices may be used to specify the indicies for the new list of MCMC samplers, in terms of the current ordered list of samplers.
+...: Chracter strings or numeric indices.  Character names may be used to specify the node names for samplers to retain.  Numeric indices may be used to specify the indicies for the new list of MCMC samplers, in terms of the current ordered list of samplers.
 
 ind: A numeric vector or character vector.  A numeric vector may be used to specify the indicies for the new list of MCMC samplers, in terms of the current ordered list of samplers.
 For example, if the MCMCconf object currently has 3 samplers, then the ordering may be reversed by calling MCMCconf$setSamplers(3:1), or all samplers may be removed by calling MCMCconf$setSamplers(numeric(0)).
@@ -754,8 +753,9 @@ ind: A numeric vector or character vector.  A numeric vector may be used to spec
 
         findSamplersOnNodes = function(nodes) {
             if(length(samplerConfs) == 0) return(integer())
-            nodes <- model$expandNodeNames(nodes, returnScalarComponents = TRUE)
-            which(unlist(lapply(samplerConfs, function(ss) any(nodes %in% ss$targetAsScalar))))
+            nodes <- model$expandNodeNames(nodes, returnScalarComponents = TRUE, sort = TRUE)
+            samplerConfNodesList <- lapply(samplerConfs, function(sc) sc$targetAsScalar)
+            return(unique(unlist(lapply(nodes, function(n) which(unlist(lapply(samplerConfNodesList, function(scn) n %in% scn)))))))
         },
 
         getSamplerDefinition = function(ind, print = FALSE) {
